deploy: f5bea941ca250864b390739ed0e82d9bd8a5624f

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
     <div>
         <hr />
         <p>
-            This Course Framework teaches Java, College Boards 10 Units of AP Computer Science A, and Web Site application development together in an integrated fashion.  The purpose is to teach Java College Board requirements while adding frameworks that meet Career Technical Education (CTE) needs.  The outcome is preparing the High School student for the AP Test and simultaneously building the skills required for Computer Science internships and beyond.
+        Placeholder. Perfect place to put song of the day
         </p>
         <hr />
     </div>
