--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/frontend/overview">Frontend</a><a class="page-link" href="/APCSA/api/overview">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/categories/ap">AP Standards</a><a class="page-link" href="/APCSA/categories/cte">CTE Standards</a><a class="page-link" href="/APCSA/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api/overview">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/categories/ap">AP Standards</a><a class="page-link" href="/APCSA/categories/cte">CTE Standards</a><a class="page-link" href="/APCSA/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -86,7 +86,7 @@ window.onload = wrap_img;
 <div class="container">
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Sorry. The requested page could not be found.</p>
 </div>
 
       </div>
