deploy: b975eb3b08a8e42930e94adb6c41cf461e436b43

--- a/api.html
+++ b/api.html
@@ -10,14 +10,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="RAYJ Music" />
 <meta property="og:description" content="RAYJ Music" />
-<link rel="canonical" href="https://nighthawkcoders.github.io/APCSA/api/overview" />
-<meta property="og:url" content="https://nighthawkcoders.github.io/APCSA/api/overview" />
+<link rel="canonical" href="https://nighthawkcoders.github.io/APCSA/api" />
+<meta property="og:url" content="https://nighthawkcoders.github.io/APCSA/api" />
 <meta property="og:site_name" content="RAYJ Music" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="API" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"API","url":"https://nighthawkcoders.github.io/APCSA/api/overview"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"API","url":"https://nighthawkcoders.github.io/APCSA/api"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/APCSA/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://nighthawkcoders.github.io/APCSA/feed.xml" title="RAYJ Music" /><link rel="shortcut icon" type="image/x-icon" href="/APCSA/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api/overview">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/categories/ap">AP Standards</a><a class="page-link" href="/APCSA/categories/cte">CTE Standards</a><a class="page-link" href="/APCSA/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -79,68 +79,7 @@ window.onload = wrap_img;
     </tr>
 </table>
 
-<h3 id="apis-in-this-sub-menu">APIs in this Sub Menu</h3>
-<blockquote>
-  <p>HTML, CSS, and JavaScript are the front-end of the API.  Java and API resource definitions are used for RESTful API definitions. Abstraction of Frontend and Backend code, the exchange of standard data format (JSON), and guidelines for exchange (REST) is a technique that saves a lot of time between developers.  Learning APIs is a highly recommended step for every developer trying to break into the world of tech.</p>
-  <ul>
-    <li>Covid19: RapidAPI example.  This is introducing APIs by accessing something that already exists.  RapidAPI shows how many  practice RESTful definitions.  Almost any data source imagined can be accessed here.</li>
-    <li>Jokes: An introduction to Java RESTful API libraries.  A Java Database is used for the Data Model, providing data persistence.  This example introduces concepts like JPA and POJOs.</li>
-    <li>Database CRUD: A full RESTful API example.   This data if properly managed in deployment and migrated when changed can last forever.</li>
-  </ul>
-</blockquote>
-
-<h3 id="web-api-overview">Web API Overview</h3>
-
-<div>
-
-    <div style="float: left; margin: 0px 10px 10px 0px;">
-        <a href="https://en.wikipedia.org/wiki/Web_API">
-            <img atl="Wikipedia Web API" src="/APCSA/images/webapi.png" title="" width="200" />
-        </a>
-    </div>
-    <div>
-        <hr />
-        <p>
-            A Web API is an application programming interface typically for a web browser.  Non-changing or Static Endpoints are used in interacting with the server-side Web APIs.  RESTful Web APIs use HTTP methods to access resources via URL parameters, and use JSON for transmitting text between client and server.
-            <ul>
-                <li>Server.  In these examples, we will be using Java to define REST APIs. Java tools have been around a long time and thus are popular for building RESTful APIs</li>
-                <ul> 
-                    <li>REST: Representational State Transfer.  A set of guidelines on how to architect a network-connected software system.</li>
-                    <li>Client-server: One guideline is a client and server must be decoupled from each other, allowing each to develop independently.</li>
-                    <li>Layered system: The client may access the resources on the server indirectly through other layers such as a proxy or using authentication. This will be clarified by application and security requirements.</li>
-                </ul>
-
-                <li>Client.  JavaScript is the frontend language used to consume data from the Python defined REST APIs. Fetch will be used to make HTTP requests, as well as handle HTTP response.  There are four basic HTTP methods, they align with Create, Read, Update, Delete (CRUD).</li>
-                <ul> 
-                    <li>GET =&gt; Retrieve/Read data</li>
-                    <li>POST =&gt; Create data</li>
-                    <li>PUT =&gt; Update data</li>
-                    <li>DELETE =&gt; Delete data</li>
-                </ul>
-
-                <li>REST endpoints will have similarity from application to application.  In planning APIs, for a Users system you can anticipate key methods.  The Users RESTful APIs would likely contain these endpoints.</li>
-                <ul> 
-                    <li>GET: /users =&gt; Get a list of users</li>
-                    <li>GET: /users(id) =&gt; Get a single user</li>
-                    <li>POST: /users =&gt; Create a new user</li>
-                    <li>PUT: /users(id) =&gt; Update a user</li>
-                    <li>DELETE: /users(id) =&gt; Delete a user</li>
-                </ul>
-
-                <li>Once a RESTful API receives and processes an HTTP request, it will return an HTTP response. Included in this response is an HTTP status code.  Common status codes are shown.</li>
-                <ul> 
-                    <li>200 =&gt; OK, this response will then have the promise of JSON data</li>
-                    <li>400 =&gt; Bad Request</li>
-                    <li>404 =&gt; Not Found</li>
-                    <li>500 =&gt; Internal Server Error (aka bug)</li>
-                </ul>
-
-            </ul>
-        </p>
-        <hr />
-    </div>
-
-</div>
+<p>&lt;/div&gt;</p>
 
 
       </div>
