--- a/tutorial/vpn.html
+++ b/tutorial/vpn.html
@@ -70,7 +70,7 @@ window.onload = wrap_img;
         </label>
 
         <div class="trigger">
-<a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api/overview">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/categories/ap">AP Standards</a><a class="page-link" href="/APCSA/categories/cte">CTE Standards</a><a class="page-link" href="/APCSA/about/">About</a>
+<a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/about/">About</a>
 </div>
       </nav>
 </div>
