--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-## Objectives
 
-<div>
 
-    <div style="float: left; margin: 0px 10px 10px 0px;">
-        <a href="https://docs.google.com/document/d/1ibm_4fqSgfnRZKhUns2vVe83MVes70Ts/edit?usp=sharing&ouid=115023546255406346351&rtpof=true&sd=true">
-            <img atl="Course Framework" src="{{site.baseurl}}/images/apcsa.png" title="Course Framework inspired by Domingo David"
-            width="200">
-        </a>
-    </div>
-</div>
+<center><h1>Test index fix please bro</h1></center>
+<center><img src="https://img1.picmix.com/output/stamp/normal/5/8/3/5/1435385_aad35.gif" alt="music" style="margin-left: auto; margin-right: auto; width: 50%; border: 4px solid white;"></center>
 
-## Blogs
 
 
