--- a/_pages/03_search.html
+++ b/_pages/03_search.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /search/
+permalink: https://peacekeeper6.github.io/RAYJ-final/search/
 title: Search
 search_exclude: true
 ---
