--- a/page3/index.html
+++ b/page3/index.html
@@ -73,18 +73,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h2 id="objectives">Objectives</h2>
-
-<div>
-
-    <div style="float: left; margin: 0px 10px 10px 0px;">
-        <a href="https://docs.google.com/document/d/1ibm_4fqSgfnRZKhUns2vVe83MVes70Ts/edit?usp=sharing&amp;ouid=115023546255406346351&amp;rtpof=true&amp;sd=true">
-            <img atl="Course Framework" src="/APCSA/images/apcsa.png" title="Course Framework inspired by Domingo David" width="200" />
-        </a>
-    </div>
-</div>
-
-<h2 id="blogs">Blogs</h2>
+        <div class="home"><center><h1>Test index fix please bro</h1></center>
+<center><img src="https://img1.picmix.com/output/stamp/normal/5/8/3/5/1435385_aad35.gif" alt="music" style="margin-left: auto; margin-right: auto; width: 50%; border: 4px solid white;" /></center>
 
 
 
