deploy: 111fe60dc452841db6fe6885d8e0ada016f96d70

--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/quiz">Quiz</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/api">API</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/search/">Search</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
