--- a/tutorial/vpn.html
+++ b/tutorial/vpn.html
@@ -70,7 +70,7 @@ window.onload = wrap_img;
         </label>
 
         <div class="trigger">
-<a class="page-link" href="/APCSA/quiz">Quiz</a><a class="page-link" href="/APCSA/login">Login</a><a class="page-link" href="/APCSA/api">API</a><a class="page-link" href="/APCSA/search/">Search</a><a class="page-link" href="/APCSA/about/">About</a>
+<a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/quiz">Quiz</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/api">API</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/search/">Search</a><a class="page-link" href="/APCSA/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a>
 </div>
       </nav>
 </div>
