deploy: 4dfc583b9f518a22b97beefd3c1530d6dcd73bec

--- a/points/16.html
+++ b/points/16.html
@@ -91,8 +91,10 @@ window.onload = wrap_img;
 
   <div class="post-content e-content" itemprop="articleBody">
     <ul id="toc" class="section-nav">
-</ul><p>#”Anti-hero”
-“Taylor Swift scores one of the most historic weeks in the 64-year history of the Billboard Hot 100 songs chart, as she becomes the first artist to claim the survey’s entire top 10 in a single frame.</p>
+<li class="toc-entry toc-h2"><a href="#anti-hero">“Anti-hero”</a></li>
+</ul><h2 id="anti-hero">
+<a class="anchor" href="#anti-hero" aria-hidden="true"><span class="octicon octicon-link"></span></a>“Anti-hero”</h2>
+<p>“Taylor Swift scores one of the most historic weeks in the 64-year history of the Billboard Hot 100 songs chart, as she becomes the first artist to claim the survey’s entire top 10 in a single frame.</p>
 
 <p>Swift surpasses Drake, who logged nine of the Hot 100’s top 10 for a week in September 2021.</p>
 
