--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ image: images/logo.png
             
                       // Country data
                       for (let i = 0; i < 1; i++) {
+                        for (const row of data) {
                         console.log(row);
             
                         // tr for each row
@@ -89,6 +90,7 @@ image: images/logo.png
                         // add HTML to container
                         resultContainer.appendChild(tr);
                       }
+                    }
                   })
               })
               // catch fetch errors (ie ACCESS to server blocked)
