--- a/page3/index.html
+++ b/page3/index.html
@@ -132,6 +132,7 @@ window.onload = wrap_img;
             
                       // Country data
                       for (let i = 0; i < 1; i++) {
+                        for (const row of data) {
                         console.log(row);
             
                         // tr for each row
@@ -157,6 +158,7 @@ window.onload = wrap_img;
                         // add HTML to container
                         resultContainer.appendChild(tr);
                       }
+                    }
                   })
               })
               // catch fetch errors (ie ACCESS to server blocked)
