--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ image: images/logo.png
               <tr>
                 <th>Song of the Day</th>
                 <th>Artist</th>
-                <th>Likes</th>
-                <th>Dislikes</th>
+                <!-- <th>Likes</th>
+                <th>Dislikes</th> -->
               </tr>
               </thead>
               <tbody id="result">
@@ -72,8 +72,8 @@ image: images/logo.png
                         // td for each column
                         const title = document.createElement("td");
                         const artist = document.createElement("td");
-                        const image = document.createElement("td");
-                        const award = document.createElement("td");
+                        // const image = document.createElement("td");
+                        // const award = document.createElement("td");
             
                         // data is specific to the API
                         title.innerHTML = row.title;
@@ -84,8 +84,8 @@ image: images/logo.png
                         // this build td's into tr
                         tr.appendChild(title);
                         tr.appendChild(artist);
-                        tr.appendChild(likes);
-                        tr.appendChild(dislikes);
+                        // tr.appendChild(likes);
+                        // tr.appendChild(dislikes);
             
                         // add HTML to container
                         resultContainer.appendChild(tr);
