--- a/https:/peacekeeper6.github.io/RAYJ-final/about/index.html
+++ b/https:/peacekeeper6.github.io/RAYJ-final/about/index.html
@@ -10,16 +10,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="RAYJ Music" />
 <meta property="og:description" content="RAYJ Music" />
-<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/" />
-<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/" />
+<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/about/" />
+<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/about/" />
 <meta property="og:site_name" content="RAYJ Music" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"About","url":"https://nighthawkcoders.github.io/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"About","url":"https://nighthawkcoders.github.io/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/about/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/RAYJ-final/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://nighthawkcoders.github.io/RAYJ-final/feed.xml" title="RAYJ Music" /><link rel="shortcut icon" type="image/x-icon" href="/RAYJ-final/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="/RAYJ-fina/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://nighthawkcoders.github.io/RAYJ-fina/feed.xml" title="RAYJ Music" /><link rel="shortcut icon" type="image/x-icon" href="/RAYJ-fina/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 <script>
@@ -54,7 +54,7 @@ window.onload = wrap_img;
 </head>
 <body><header class="site-header">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/RAYJ-final/">RAYJ Music</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/RAYJ-fina/">RAYJ Music</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz/overview">Quiz</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/RAYJ-fina/quiz/overview">Quiz</a><a class="page-link" href="/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-fina/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -86,7 +86,7 @@ window.onload = wrap_img;
   <li>2021-2022 Archives: <a href="https://padlet.com/jmortensen7/csa2022tri1">Fall</a>, <a href="https://padlet.com/jmortensen7/csa2022tri2">Early Winter</a>, <a href="https://csacoders.nighthawkcodingsociety.com/">Late Winter, Spring</a></li>
 </ul>
 
-<p><img src="/RAYJ-final/images/qr_code.png" alt="QR Code" /></p>
+<p><img src="/RAYJ-fina/images/qr_code.png" alt="QR Code" /></p>
 
   </div>
 
@@ -94,16 +94,16 @@ window.onload = wrap_img;
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/RAYJ-final/"></data>
+  <data class="u-url" href="/RAYJ-fina/"></data>
 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/RAYJ-final/feed.xml">
+          <a href="/RAYJ-fina/feed.xml">
             <svg class="svg-icon orange">
-              <use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#rss"></use>
+              <use xlink:href="/RAYJ-fina/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
           </a>
         </p>
@@ -113,7 +113,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/nighthawkcoders" target="_blank" title="nighthawkcoders"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/NighthawkCoding" target="_blank" title="NighthawkCoding"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#twitter"></use></svg></a></li><li><a rel="me" href="https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q" target="_blank" title="YouTube"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#youtube"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/nighthawkcoders" target="_blank" title="nighthawkcoders"><svg class="svg-icon grey"><use xlink:href="/RAYJ-fina/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/NighthawkCoding" target="_blank" title="NighthawkCoding"><svg class="svg-icon grey"><use xlink:href="/RAYJ-fina/assets/minima-social-icons.svg#twitter"></use></svg></a></li><li><a rel="me" href="https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q" target="_blank" title="YouTube"><svg class="svg-icon grey"><use xlink:href="/RAYJ-fina/assets/minima-social-icons.svg#youtube"></use></svg></a></li></ul>
 </div>
 
   </div>
