--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 
 <center><h1>RAYJ Music</h1></center>
-<center><h3>An API-based website that handpick music recommendations, just for you!</h3><center>
+<center><h3>An API-centric website that handpicks music recommendations, just for you!</h3><center>
 
   
 <div>
