deploy: 18446c08a5786254656f795f6bb36b55b1fbe9f3

--- a/page2/index.html
+++ b/page2/index.html
@@ -74,7 +74,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><center><h1>RAYJ Music</h1></center>
-<center><h3>An API-based website that handpick music recommendations, just for you!</h3><center>
+<center><h3>An API-centric website that handpicks music recommendations, just for you!</h3><center>
 
   
 <div>
