--- a/page3/index.html
+++ b/page3/index.html
@@ -76,6 +76,17 @@ window.onload = wrap_img;
         <div class="home"><center><h1>RAYJ Music</h1></center>
 <center><h3>An API-centric website that handpicks music recommendations, just for you!</h3><center>
 
+<style>
+   body {
+            margin: 0;
+            padding: 0;
+            /* background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF); */
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+            background:linear-gradient(#0e071b, #230a4d);
+        }
+</style>
   
 <div>
   <hr />
