--- a/https:/peacekeeper6.github.io/RAYJ-final/about/index.html
+++ b/https:/peacekeeper6.github.io/RAYJ-final/about/index.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz/overview">Quiz</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz">Quiz</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
