--- a/search/index.html
+++ b/search/index.html
@@ -10,14 +10,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="RAYJ Music" />
 <meta property="og:description" content="RAYJ Music" />
-<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/search/" />
-<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/search/" />
+<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/search/" />
+<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/search/" />
 <meta property="og:site_name" content="RAYJ Music" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Search" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"Search","url":"https://nighthawkcoders.github.io/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/search/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"Search","url":"https://nighthawkcoders.github.io/RAYJ-final/search/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/RAYJ-final/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://nighthawkcoders.github.io/RAYJ-final/feed.xml" title="RAYJ Music" /><link rel="shortcut icon" type="image/x-icon" href="/RAYJ-final/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz/overview">Quiz</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz">Quiz</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/https:/peacekeeper6.github.io/RAYJ-final/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
