--- a/_pages/songfeedback.html
+++ b/_pages/songfeedback.html
@@ -46,8 +46,8 @@ week: 6
     const DISLIKE = "dislike";
   
     // prepare fetch urls;
-    // const url = "https://music.nighthawkcoders.tk/api/songs/";
-    const url = "http://localhost:8080/api/songs/";
+    const url = "https://music.nighthawkcoders.tk/api/songs/";
+    // const url = "http://localhost:8080/api/songs/";
     const get_url = url +"/";
     const like_url = url + "/like/";  // like reaction
     const dislike_url = url + "/dislike/";  // dislike reaction
