deploy: 6eee89324802db8a71c247155781904f51968cd7

--- a/https:/peacekeeper6.github.io/RAYJ-final/songfeedback.html
+++ b/https:/peacekeeper6.github.io/RAYJ-final/songfeedback.html
@@ -117,8 +117,8 @@ window.onload = wrap_img;
     const DISLIKE = "dislike";
   
     // prepare fetch urls;
-    // const url = "https://music.nighthawkcoders.tk/api/songs/";
-    const url = "http://localhost:8080/api/songs/";
+    const url = "https://music.nighthawkcoders.tk/api/songs/";
+    // const url = "http://localhost:8080/api/songs/";
     const get_url = url +"/";
     const like_url = url + "/like/";  // like reaction
     const dislike_url = url + "/dislike/";  // dislike reaction
