--- a/_pages/01_login.html
+++ b/_pages/01_login.html
@@ -34,12 +34,12 @@ week: 2
             font-size: 24px;
         }
         body {
-            margin: 0;
-            padding: 0;
+            /* margin: 0;
+            padding: 0; */
             /* background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF); */
-            height: 100vh;
+            /* height: 100vh;
             justify-content: center;
-            align-items: center;
+            align-items: center; */
             background:linear-gradient(#0e071b, #230a4d);
         }
         form {
@@ -50,7 +50,7 @@ week: 2
             box-shadow: 0px 25px 40px rgb(190, 186, 238);
         }
         hr {
-            width: 24%
+            width: 5%
         }
         .left {
             float:left;
@@ -59,13 +59,13 @@ week: 2
             float:right;
         }
         .divider {
-            width:500px;
+            width:20%;
             text-align:center;
         }
         .divider hr {
             margin-left:auto;
             margin-right:auto;
-            width:40%;  
+            width:15%;  
         }
         </style>
     <!-- End of body content specific to page -->
