deploy: 8de9dd8377cb69aa0c337457b824448ab7b7adc0

--- a/https:/peacekeeper6.github.io/RAYJ-final/login.html
+++ b/https:/peacekeeper6.github.io/RAYJ-final/login.html
@@ -97,12 +97,12 @@ window.onload = wrap_img;
             font-size: 24px;
         }
         body {
-            margin: 0;
-            padding: 0;
+            /* margin: 0;
+            padding: 0; */
             /* background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF); */
-            height: 100vh;
+            /* height: 100vh;
             justify-content: center;
-            align-items: center;
+            align-items: center; */
             background:linear-gradient(#0e071b, #230a4d);
         }
         form {
@@ -113,7 +113,7 @@ window.onload = wrap_img;
             box-shadow: 0px 25px 40px rgb(190, 186, 238);
         }
         hr {
-            width: 24%
+            width: 5%
         }
         .left {
             float:left;
@@ -122,13 +122,13 @@ window.onload = wrap_img;
             float:right;
         }
         .divider {
-            width:500px;
+            width:20%;
             text-align:center;
         }
         .divider hr {
             margin-left:auto;
             margin-right:auto;
-            width:40%;  
+            width:15%;  
         }
         </style>
     <!-- End of body content specific to page -->
