--- a/_pages/01_login.html
+++ b/_pages/01_login.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: https://peacekeeper6.github.io/RAYJ-final/login
+permalink: /login
 title: Login
 type: pbl
 week: 2
