--- a/quiz.html
+++ b/quiz.html
@@ -241,17 +241,21 @@ function loadNextQuestion () {
 
     if($(totalScore) => 1 && <= 3) {
       yourGenre = "Pop";
-      yourArtists = "You may be more prone than the average person of getting emotional. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
+      yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
+      yourSongs = ""
     if($(totalScore) => 4 && <= 6) {
       yourGenre = "Pop";
       yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
+      yourSongs = ""
     if($(totalScore) => 7 && <= 9) {
       yourGenre = "Pop/R&B";
       yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
+      yourSongs = ""
     }
     if($(totalScore) => 10 && <= 12) {
       yourGenre = "Alternative";
       yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
+      yourSongs = ""
     }
     if($(totalScore) => 13 && <= 15) {
       yourGenre = "Alternative";
