--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ image: images/logo.png
                 <!-- generated rows -->
               </tbody>
             </table>
+
+            <h1>Top BillBoard Songs of 2022</h1>
             
             <!-- Script is layed out in a sequence (no function) and will execute when page is loaded -->
             <script>
