--- a/_pages/01_login.html
+++ b/_pages/01_login.html
@@ -7,7 +7,7 @@ week: 2
 ---
 
 <head>
-    <title>Top Music Platorms</title>
+    <title>Login</title>
 </head>
     <th:block layout:fragment="body" th:remove="tag">
     <br> <h1 style="color:white;margin-top:3%">Welcome back! Login or make a new account to get started!</h1> <br> 
