--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@ window.onload = wrap_img;
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <head>
-    <title>Top Music Platorms</title>
+    <title>Login</title>
 </head>
     <th:block layout:fragment="body" th:remove="tag">
     <br> <h1 style="color:white;margin-top:3%">Welcome back! Login or make a new account to get started!</h1> <br> 
