--- a/_pages/00_quiz.html
+++ b/_pages/00_quiz.html
@@ -6,7 +6,17 @@ title: Quiz
 <head>
     <title>Music Recommendation Quiz</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-</head>
+<style>
+  .previous, .next {
+    color: white;
+  }
+  .option1, .option2, .option3 {
+  width: 3em;
+  height: 3rem;
+  accent-color: green;
+  }
+  </style>
+  </head>
 
 <body>
     <div class="quiz-container">
