deploy: 773332eb492341e756bed760bb3a9ae29a2c5d73

--- a/quiz.html
+++ b/quiz.html
@@ -79,7 +79,17 @@ window.onload = wrap_img;
     <head>
     <title>Music Recommendation Quiz</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-</head>
+<style>
+  .previous, .next {
+    color: white;
+  }
+  .option1, .option2, .option3 {
+  width: 3em;
+  height: 3rem;
+  accent-color: green;
+  }
+  </style>
+  </head>
 
 <body>
     <div class="quiz-container">
