--- a/_pages/00_quiz.html
+++ b/_pages/00_quiz.html
@@ -10,7 +10,7 @@ title: Quiz
   .previous, .next {
     color: white;
   }
-  .option1, .option2, .option3 {
+  .option1, .option2, .option3, .option {
   width: 3em;
   height: 3rem;
   accent-color: green;
@@ -36,8 +36,8 @@ title: Quiz
         </label>
         <!-- Buttons -->
         <div class="controls">
-            <button class="previous">Previous</button>
-            <button class="next">Next</button>
+            <button class="btn btn-outline-light previous">Previous</button>
+            <button class="btn btn-outline-light next">Next</button>
         </div>
     </div>
     <div class="result">
