--- a/quiz.html
+++ b/quiz.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
   .previous, .next {
     color: white;
   }
-  .option1, .option2, .option3 {
+  .option1, .option2, .option3, .option {
   width: 3em;
   height: 3rem;
   accent-color: green;
@@ -109,8 +109,8 @@ window.onload = wrap_img;
         </label>
         <!-- Buttons -->
         <div class="controls">
-            <button class="previous">Previous</button>
-            <button class="next">Next</button>
+            <button class="btn btn-outline-light previous">Previous</button>
+            <button class="btn btn-outline-light next">Next</button>
         </div>
     </div>
     <div class="result">
