--- a/_pages/00_quiz.html
+++ b/_pages/00_quiz.html
@@ -8,9 +8,15 @@ title: Quiz
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <style>
   .previous, .next {
-    color: white;
+    color: #ffffff;
   }
-  .option1, .option2, .option3, .option {
+  .title {
+    font-size:24px;
+  }
+  .question {
+    font-size:16px;
+  }
+  input[type="radio"] {
   width: 3em;
   height: 3rem;
   accent-color: green;
@@ -19,6 +25,7 @@ title: Quiz
   </head>
 
 <body>
+  <center>
     <div class="quiz-container">
         <div class="title">Personality Quiz for Music Recommendations</div>
         <div id="question" class="question"></div>
@@ -42,6 +49,7 @@ title: Quiz
     </div>
     <div class="result">
     </div>
+  </center>
 </body>
 
 <script>
