change text sizes

--- a/_pages/00_quiz.html
+++ b/_pages/00_quiz.html
@@ -11,15 +11,18 @@ title: Quiz
     color: #ffffff;
   }
   .title {
-    font-size:24px;
+    font-size:48px;
   }
   .question {
-    font-size:16px;
+    font-size:24px;
+  }
+  .option {
+    font-size:18px;
   }
   input[type="radio"] {
   width: 3em;
   height: 3rem;
-  accent-color: green;
+  accent-color: white;
   }
   </style>
   </head>
