--- a/quiz.html
+++ b/quiz.html
@@ -84,15 +84,18 @@ window.onload = wrap_img;
     color: #ffffff;
   }
   .title {
-    font-size:24px;
+    font-size:48px;
   }
   .question {
-    font-size:16px;
+    font-size:24px;
+  }
+  .option {
+    font-size:18px;
   }
   input[type="radio"] {
   width: 3em;
   height: 3rem;
-  accent-color: green;
+  accent-color: white;
   }
   </style>
   </head>
