--- a/_pages/00_quiz.html
+++ b/_pages/00_quiz.html
@@ -12,12 +12,15 @@ title: Quiz
   }
   .title {
     font-size:48px;
+    margin-bottom: 2rem;
   }
   .question {
     font-size:24px;
+    margin-bottom: 1rem;
   }
   .option {
     font-size:18px;
+    margin-bottom: 1rem;
   }
   input[type="radio"] {
   width: 3em;
