--- a/quiz.html
+++ b/quiz.html
@@ -85,12 +85,15 @@ window.onload = wrap_img;
   }
   .title {
     font-size:48px;
+    margin-bottom: 2rem;
   }
   .question {
     font-size:24px;
+    margin-bottom: 1rem;
   }
   .option {
     font-size:18px;
+    margin-bottom: 1rem;
   }
   input[type="radio"] {
   width: 3em;
