deploy: b34ac580021ef149a0e06da18e52813969e30132

--- a/quiz.html
+++ b/quiz.html
@@ -99,6 +99,7 @@ window.onload = wrap_img;
   width: 3em;
   height: 3rem;
   accent-color: white;
+  margin-bottom: 3rem;
   }
   </style>
   </head>
