--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ image: images/logo.png
               </table>
               
               <!-- Script is layed out in a sequence (no function) and will execute when page is loaded -->
+              <h1>Top Songs of 2022!</h1>
               <script>
                 // prepare HTML result container for new output
                 const resultContainer = document.getElementById("result");
