deploy: fde6edfeaba68f2704590c35908250081465477e

--- a/randomsong.html
+++ b/randomsong.html
@@ -10,8 +10,8 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="RAYJ Music" />
 <meta property="og:description" content="RAYJ Music" />
-<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/_pages/randomsong.html" />
-<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/_pages/randomsong.html" />
+<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/randomsong" />
+<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/randomsong" />
 <meta property="og:site_name" content="RAYJ Music" />
 <meta property="og:image" content="https://nighthawkcoders.github.io/RAYJ-final/images/logo.png" />
 <meta property="og:type" content="website" />
@@ -19,7 +19,7 @@
 <meta property="twitter:image" content="https://nighthawkcoders.github.io/RAYJ-final/images/logo.png" />
 <meta property="twitter:title" content="RAYJ Music" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"RAYJ Music","image":"https://nighthawkcoders.github.io/RAYJ-final/images/logo.png","url":"https://nighthawkcoders.github.io/RAYJ-final/_pages/randomsong.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"RAYJ Music","image":"https://nighthawkcoders.github.io/RAYJ-final/images/logo.png","url":"https://nighthawkcoders.github.io/RAYJ-final/randomsong"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/RAYJ-final/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://nighthawkcoders.github.io/RAYJ-final/feed.xml" title="RAYJ Music" /><link rel="shortcut icon" type="image/x-icon" href="/RAYJ-final/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
