--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -1,3 +1,9 @@
+---
+layout: page
+permalink: /platforms/
+title: Platforms
+---
+
 <!DOCTYPE HTML>
 
 <html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml"
