--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -1,12 +1,12 @@
 ---
 layout: page
 permalink: /platforms/
-title: Top Music Platforms for Streaming!
+title: Platforms
 ---
 
 <head>
     <meta charset="utf-8">
-    <title>Top Music Platorms</title>
+    <title>Top Music Platforms for Streaming</title>
 </head>
 
 <body>
