--- a/platforms/index.html
+++ b/platforms/index.html
@@ -89,7 +89,7 @@ window.onload = wrap_img;
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/images/Spotify.jpeg}" alt="Java Development" height="250">
+                    <img class="card-img-top" th:src="@{/images/Spotify.jpeg}" alt="Spotify" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Spotify</h5>
                     <p class="card-text">
