yrt music heihgt

--- a/_pages/03_search.html
+++ b/_pages/03_search.html
@@ -16,3 +16,7 @@ search_exclude: true
     <br>
     <div class="js-search-results search-results-wrap"></div>
 </div>
+
+<div>
+    <img src="billboard.jpeg" alt="Girl in a jacket" width="500" height="600">
+</div>
