--- a/search/index.html
+++ b/search/index.html
@@ -81,6 +81,9 @@ window.onload = wrap_img;
     <div class="js-search-results search-results-wrap"></div>
 </div>
 
+<div>
+    <img src="billboard.jpeg" alt="Girl in a jacket" width="500" height="600">
+</div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/RAYJ-final/"></data>
