deploy: f4623450cf27712a4476f5b4774acd643b66fe12

--- a/search/index.html
+++ b/search/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </div>
 
 <div>
-    <img src="billboard.jpeg" alt="Girl in a jacket" width="500" height="600">
+    <img src="billboard.jpeg" alt="Billboard" width="1000" height="600">
 </div>
       </div>
     </main><footer class="site-footer h-card">
