--- a/_pages/03_search.html
+++ b/_pages/03_search.html
@@ -18,5 +18,5 @@ search_exclude: true
 </div>
 
 <div>
-    <img src="images/billboard.jpeg" alt="Billboard" width="1000" height="600">
+    ![BillBoard]({{site.baseurl}}/images/billboard.jpeg)
 </div>
