--- a/search/index.html
+++ b/search/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </div>
 
 <div>
-    <img src="images/billboard.jpeg" alt="Billboard" width="1000" height="600">
+    ![BillBoard](/RAYJ-final/images/billboard.jpeg)
 </div>
       </div>
     </main><footer class="site-footer h-card">
