--- a/_pages/03_search.html
+++ b/_pages/03_search.html
@@ -18,5 +18,5 @@ search_exclude: true
 </div>
 
 <div>
-    ![BillBoard]({{site.baseurl}}/images/billboard.jpeg)
+   <img src = "/images/billboard.png">
 </div>
