deploy: 61d753111c72a8f2d585eba443769de5dc021cc8

--- a/search/index.html
+++ b/search/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </div>
 
 <div>
-    ![BillBoard](/RAYJ-final/images/billboard.jpeg)
+   <img src = "/images/billboard.png">
 </div>
       </div>
     </main><footer class="site-footer h-card">
