--- a/search/index.html
+++ b/search/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </div>
 
 <div>
-   <img src = "/images/billboard.png">
+    <img src="/RAYJ-final//images/logo.png" height="60"  title="APIs" alt="">
 </div>
       </div>
     </main><footer class="site-footer h-card">
