--- a/_pages/03_search.html
+++ b/_pages/03_search.html
@@ -18,5 +18,5 @@ search_exclude: true
 </div>
 
 <div>
-    <img src="{{site.baseurl}}//images/logo.png" height="60"  title="APIs" alt="">
+    <img src="{{site.baseurl}}//images/billboard.png" height="60"  title="APIs" alt="">
 </div>
