deploy: 3b57dad7f3b0ad23485e8cad540aa31d3c5886dd

--- a/search/index.html
+++ b/search/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </div>
 
 <div>
-    <img src="/RAYJ-final//images/billboard.png" height="600"  title="APIs" alt="">
+    <img src="/RAYJ-final//images/billboard.png" height="600" width="1100"  title="APIs" alt="">
 </div>
       </div>
     </main><footer class="site-footer h-card">
