--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -17,7 +17,7 @@ title: Platforms
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/images/Spotify.jpeg}" alt="Spotify" height="250">
+                    <img src="{{site.baseurl}}//images/Spotify.jpeg" height="500" width="1100"  title="APIs" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Spotify</h5>
                     <p class="card-text">
