--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -31,7 +31,7 @@ title: Platforms
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/images/apple-music.jpg}" alt="Spring Development" height="250">
+                    <img src="{{site.baseurl}}//images/apple-music.jpeg" height="500" width="1100"  title="APIs" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Apple Music</h5>
                     <p class="card-text">
