deploy: 7e813af2f49900df871f34dea18adc9e2d06fbc5

--- a/platforms/index.html
+++ b/platforms/index.html
@@ -103,7 +103,7 @@ window.onload = wrap_img;
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" th:src="@{/images/apple-music.jpg}" alt="Spring Development" height="250">
+                    <img src="/RAYJ-final//images/apple-music.jpeg" height="500" width="1100"  title="APIs" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Apple Music</h5>
                     <p class="card-text">
