deploy: b49994ce21302b8309b42b77ec56e638d130b450

--- a/platforms/index.html
+++ b/platforms/index.html
@@ -89,7 +89,7 @@ window.onload = wrap_img;
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img src="/RAYJ-final//images/Spotify.jpeg" height="150" width="800"  title="APIs" alt="">
+                    <img src="/RAYJ-final//images/Spotify.jpeg" height="150" width="800"  alt="">
                     <div class="card-body">
                     <h5 class="card-title">Spotify</h5>
                     <p class="card-text">
@@ -103,7 +103,7 @@ window.onload = wrap_img;
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img src="/RAYJ-final//images/apple-music.jpeg" height="150" width="800"  title="APIs" alt="">
+                    <img src="/RAYJ-final//images/apple-music.jpeg" height="150" width="800" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Apple Music</h5>
                     <p class="card-text">
@@ -117,7 +117,7 @@ window.onload = wrap_img;
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img src="/RAYJ-final//images/youtube-music.jpeg" height="150" width="800"  title="APIs" alt="">
+                    <img src="/RAYJ-final//images/youtube-music.jpeg" height="150" width="800"  alt="">
                     <div class="card-body">
                     <h5 class="card-title">YouTube Music</h5>
                     <p class="card-text">
