--- a/_pages/songfeedback.html
+++ b/_pages/songfeedback.html
@@ -20,6 +20,7 @@ week: 6
 <body style="background-color:#ffffff;">
 <th:block layout:fragment="body" th:remove="tag">
 <h1><strong>Songs Table</strong></h1>
+<h3>API of the top 10 Billboard songs at the moment</h3>
 <center>
 <table>
     <thead>
