--- a/songfeedback.html
+++ b/songfeedback.html
@@ -88,6 +88,7 @@ window.onload = wrap_img;
 <body style="background-color:#ffffff;">
 <th:block layout:fragment="body" th:remove="tag">
 <h1><strong>Songs Table</strong></h1>
+<h3>API of the top 10 Billboard songs at the moment</h3>
 <center>
 <table>
     <thead>
