random song desc

--- a/_pages/randomsong.html
+++ b/_pages/randomsong.html
@@ -6,8 +6,8 @@ image: images/logo.png
 ---
 
 
-<center><h3>Bored of all your songs??</h3><center>
-
+<center><h3>Bored of all your songs?</h3><center>
+<h5>Look no further!<h5>
 
   <div>
     <hr>
