--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -12,7 +12,7 @@ title: Platforms
 <body>
 <th:block layout:fragment="body" th:remove="tag">
     <!-- Start of body content specific to page -->
-    <div class="px-5 py-5 mx-auto">
+    <div>
         <h1><strong>Top Music Platforms</strong></h1>
         <br>
         <br>
@@ -37,7 +37,7 @@ title: Platforms
             <br>
             <br>
 
-            <div class="col-4">
+            <div>
                 <div class="card">
                     <img src="{{site.baseurl}}//images/apple-music.jpeg" height="150" width="800" alt="">
                     <div class="card-body">
@@ -56,7 +56,7 @@ title: Platforms
             <br>
             <br>
 
-            <div class="col-4">
+            <div>
                 <div class="card">
                     <img src="{{site.baseurl}}//images/youtube-music.jpeg" height="150" width="800"  alt="">
                     <div class="card-body">
