remove billboard img from search

--- a/_pages/03_search.html
+++ b/_pages/03_search.html
@@ -17,6 +17,6 @@ search_exclude: true
     <div class="js-search-results search-results-wrap"></div>
 </div>
 
-<div>
+<!-- <div>
     <img src="{{site.baseurl}}//images/billboard.png" height="500" width="1100"  title="APIs" alt="">
-</div>
+</div> -->
