deploy: 7d7e40013ef8bd8a0791b8a0058462a920417811

--- a/platforms/index.html
+++ b/platforms/index.html
@@ -84,7 +84,7 @@ window.onload = wrap_img;
 <body>
 <th:block layout:fragment="body" th:remove="tag">
     <!-- Start of body content specific to page -->
-    <div class="px-5 py-5 mx-auto">
+    <div>
         <h1><strong>Top Music Platforms</strong></h1>
         <br>
         <br>
@@ -109,7 +109,7 @@ window.onload = wrap_img;
             <br>
             <br>
 
-            <div class="col-4">
+            <div>
                 <div class="card">
                     <img src="/RAYJ-final//images/apple-music.jpeg" height="150" width="800" alt="">
                     <div class="card-body">
@@ -128,7 +128,7 @@ window.onload = wrap_img;
             <br>
             <br>
 
-            <div class="col-4">
+            <div>
                 <div class="card">
                     <img src="/RAYJ-final//images/youtube-music.jpeg" height="150" width="800"  alt="">
                     <div class="card-body">
