--- a/randomsong.html
+++ b/randomsong.html
@@ -71,8 +71,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><center><h3>Bored of all your songs??</h3><center>
-
+        <div class="home"><center><h3>Bored of all your songs?</h3><center>
+<h5>Look no further!<h5>
 
   <div>
     <hr />
@@ -151,7 +151,7 @@ window.onload = wrap_img;
 
 
 
-</body></p></div></center></center>
+</body></p></div></h5></h5></center></center>
 
 
 
