--- a/platforms/index.html
+++ b/platforms/index.html
@@ -83,8 +83,7 @@ window.onload = wrap_img;
 
 <body>
 <th:block layout:fragment="body" th:remove="tag">
-    <!-- Start of body content specific to page -->
-    <div class="px-5 py-5 mx-auto">
+    <div>
         <h1><strong>Top Music Platforms</strong></h1>
         <br>
         <br>
@@ -109,7 +108,7 @@ window.onload = wrap_img;
             <br>
             <br>
 
-            <div class="col-4">
+            <div>
                 <div class="card">
                     <img src="/RAYJ-final//images/apple-music.jpeg" height="150" width="800" alt="">
                     <div class="card-body">
@@ -128,7 +127,7 @@ window.onload = wrap_img;
             <br>
             <br>
 
-            <div class="col-4">
+            <div>
                 <div class="card">
                     <img src="/RAYJ-final//images/youtube-music.jpeg" height="150" width="800"  alt="">
                     <div class="card-body">
@@ -145,7 +144,6 @@ window.onload = wrap_img;
             
         </div>
     </div>
-    <!-- End of body content specific to page -->
 </th:block>
 </body>
 
