deploy: 61f148ca9c8eb9051f241b756e3710082f54a61c

--- a/search/index.html
+++ b/search/index.html
@@ -81,9 +81,9 @@ window.onload = wrap_img;
     <div class="js-search-results search-results-wrap"></div>
 </div>
 
-<!-- <div>
+<div>
     <img src="/RAYJ-final//images/billboard.png" height="500" width="1100"  title="APIs" alt="">
-</div> -->
+</div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/RAYJ-final/"></data>
